--- a/InteropManager.csproj
+++ b/InteropManager.csproj
@@ -51,11 +51,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
+    <Compile Include="HelperMethods.cs" />
+    <Compile Include="InputManager.cs" />
     <Compile Include="Permissions.cs" />
     <Compile Include="InteropManager.cs" />
     <Compile Include="Exceptions.cs" />
     <Compile Include="Target.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="temp.cs" />
     <Compile Include="WinAPI.cs" />
   </ItemGroup>
   <ItemGroup>
